--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/storage": "^5.18.3",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
     "pdfkit": "^0.13.0"
   }
 }
